index / img / alt

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="img-years">
-              <img src="images/photo r extense page garde n2.jpg" alt="Image" class="img-fluid">
+              <img src="images/photo r extense page garde n2.jpg" alt="Image page de garde" class="img-fluid">
               <div class="year">
                 <span>-10% <span>POUR TOUTES NOUVELLES <br>CLIENTES </span></span>
               </div>
@@ -126,25 +126,25 @@
           <div class="col-12">
             <div class="nonloop-block-13 owl-carousel d-flex">
               <div class="item-1 h">
-                <img src="images/devis gratuit sur mesure.jpg" alt="Image" class="img-fluid">
+                <img src="images/devis gratuit sur mesure.jpg" alt="Image devis gratuit" class="img-fluid">
                 <div class="item-1-contents">
                   <h3>Devis gratuit <br> sur mesure</h3>
                 </div>
               </div>
               <div class="item-1 h">
-                <img src="images/dépose d'extensions à froid2.jpg" alt="Image" class="img-fluid">
+                <img src="images/dépose d'extensions à froid2.jpg" alt="Image dépose d'extensions" class="img-fluid">
                 <div class="item-1-contents">
                   <h3>Dépose <br>d’extensions</h3>
                 </div>
               </div>
               <div class="item-1 h">
-                <img src="images/prestatio pose d'extensions4.jpg" alt="Image" class="img-fluid">
+                <img src="images/prestatio pose d'extensions4.jpg" alt="Image pose d'extension" class="img-fluid">
                 <div class="item-1-contents">
                   <h3>Pose <br> d’extensions </h3>
                 </div>
               </div>
               <div class="item-1 h">
-                <img src="images/coiffure steampod2.jpg" alt="Image" class="img-fluid">
+                <img src="images/coiffure steampod2.jpg" alt="Image coiffure steampod" class="img-fluid">
                 <div class="item-1-contents">
                   <h3>Coiffure Steampod <br>de l’Oréal</h3>
                 </div>
@@ -182,7 +182,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/devis gratuit service supp2.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/devis gratuit service supp2.jpg" alt="Image devis gratuit" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -194,7 +194,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/photo 3 sur site2.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/photo 3 sur site2.jpg" alt="Image photo du site" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -206,7 +206,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/conseils d2.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/conseils d2.jpg" alt="Image conseils" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -218,7 +218,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/depose gratuite si pose.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/depose gratuite si pose.jpg" alt="Image dépose gratuite si pose" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -230,7 +230,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/ecoute et dispo2.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/ecoute et dispo2.jpg" alt="Image ecoute et dispo" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -242,7 +242,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/dépose d'extensions.jpg" alt="Image" class="img-fluid mr-3">
+                  <img src="images/dépose d'extensions.jpg" alt="Image dépose d'extension" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -297,7 +297,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
+            <img src="images/Sam.jpg" alt="Image owner" class="img-fluid mb-5">
             <h2 class="footer-heading mb-3">A propos de moi</h2>
             <p>Technicienne spécialiste des extensions de cheveux à froid.
               je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
