--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -6,14 +6,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
-  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta property="og:site_name" content="Rextense">
+  <meta property="og:url" content="https://rextense.com/" />
+  <meta property="og:image" content="https://rextense.com/" />
+  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+
+  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
   <meta name="og:description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
+  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  
+  <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -67,7 +75,7 @@
     </header>
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-        style="background-image: url('images/photo 2 qualité des extensions.jpg')">
+        style="background-image: url('images/photo 2 qualite des extensions.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
@@ -167,7 +175,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
-          <img src="images/Sam.jpg" alt="Image sam" class="img-fluid mb-5">
+          <img src="images/Sam.jpg" alt="Image owner" class="img-fluid mb-5">
           <h2 class="footer-heading mb-3">A propos de moi</h2>
           <p>Technicienne spécialiste des extensions de cheveux à froid.
             je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
@@ -179,17 +187,15 @@
             <div class="col-lg-6 ml-auto">
               <h2 class="footer-heading mb-4">Liens</h2>
               <ul class="list-unstyled">
-                <li><a href="prestations-rdv.html">Contacez moi</a></li>
+                <li><a href="prestations-rdv.html">Contactez moi</a></li>
               </ul>
-            </div>
-            <div class="col-lg-6">
             </div>
           </div>
         </div>
       </div>
     </div>
   </footer>
-  </div>
+
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.0.js"></script>
   <script src="js/popper.min.js"></script>
