--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE : pose d'extensions cheveux à gargenville</title>
+  <title>REXTENSE : pose d'extensions cheveux à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
-  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta property="og:site_name" content="Rextense">
+  <meta property="og:url" content="https://rextense.com/" />
+  <meta property="og:image" content="https://rextense.com/" />
+  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+
+  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
   <meta name="og:description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
+  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  
+
+
+  <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <!-- ==================================== -->
@@ -132,7 +142,7 @@
                 </div>
               </div>
               <div class="item-1 h">
-                <img src="images/dépose d'extensions à froid2.jpg" alt="Image dépose d'extensions" class="img-fluid">
+                <img src="images/depose d'extensions a froid2.jpg" alt="Image dépose d'extensions" class="img-fluid">
                 <div class="item-1-contents">
                   <h3>Dépose <br>d’extensions</h3>
                 </div>
@@ -218,7 +228,8 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/depose gratuite si pose.jpg" alt="Image dépose gratuite si pose" class="img-fluid mr-3">
+                  <img src="images/depose gratuite si pose.jpg" alt="Image dépose gratuite si pose"
+                    class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -242,7 +253,7 @@
             <div class="service-1">
               <span class="service-1-icon">
                 <div class="d-flex v-card align-items-center mb-4">
-                  <img src="images/dépose d'extensions.jpg" alt="Image dépose d'extension" class="img-fluid mr-3">
+                  <img src="images/depose d'extensions.jpg" alt="Image dépose d'extension" class="img-fluid mr-3">
                 </div>
               </span>
               <div class="service-1-contents">
@@ -254,7 +265,7 @@
       </div>
     </div>
     <div class="site-section bg-light">
- <!-- <div class="container">
+      <!-- <div class="container">
             <div class="row justify-content-center text-center mb-5">
                <div class="col-7 text-center mb-5"> -->
 
@@ -316,23 +327,22 @@
           </div>
         </div>
       </div>
-  </div>
-  </footer>
-  </div>
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.0.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/main.js"></script>
+    </footer>
+
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.0.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.animateNumber.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
