--- a/photos.html
+++ b/photos.html
@@ -6,14 +6,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
-  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta property="og:site_name" content="Rextense">
+  <meta property="og:url" content="https://rextense.com/" />
+  <meta property="og:image" content="https://rextense.com/" />
+  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+
+  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
   <meta name="og:description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
+  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  
+  <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -93,7 +101,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 1.1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 1.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -108,7 +116,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 2.2.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 2.2.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -123,7 +131,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 3.3.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 3.3.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -138,7 +146,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 4 bis1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 4 bis1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -153,7 +161,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 5.1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 5.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -168,7 +176,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 6.1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 6.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -183,7 +191,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 7.1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 7.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -198,7 +206,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 8.1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 8.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -213,7 +221,7 @@
                 </div>
                 <div class="photos-apres-apres">
                   <h2>Après</h2>
-                  <img src="images/photos avant apres/photo après 9.1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/photos avant apres/photo apres 9.1.jpg" alt="Image" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -252,8 +260,6 @@
                 <ul class="list-unstyled">
                   <li><a href="prestations-rdv.html">Contactez moi</a></li>
                 </ul>
-              </div>
-              <div class="col-lg-6">
               </div>
             </div>
           </div>
