--- a/prestations-rdv.html
+++ b/prestations-rdv.html
@@ -6,14 +6,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
-  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta property="og:site_name" content="Rextense">
+  <meta property="og:url" content="https://rextense.com/" />
+  <meta property="og:image" content="https://rextense.com/" />
+  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+
+  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
   <meta name="og:description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
+  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  
+  <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -193,12 +201,10 @@
           <div class="col-lg-8 ml-auto">
             <div class="row">
               <div class="col-lg-6 ml-auto">
-                <h2 class="footer-heading mb-4">liens</h2>
+                <h2 class="footer-heading mb-4">Liens</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#contactez-moi">Contactez moi</a></li>
+                  <li><a href="prestations-rdv.html">Contactez moi</a></li>
                 </ul>
-              </div>
-              <div class="col-lg-6">
               </div>
             </div>
           </div>
