--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
     </div>
     <header class="site-navbar site-navbar-target" role="banner">
       <div class="container">
+        
         <div class="row align-items-center position-relative">
           <div class="col-3 ">
+
             <div class="site-logo">
-              <a href="index.html">R'EXTENSE</a>
+              <img src="images/logosticker.png" alt="Image logo" class="img-fluid1">
+
+              <a href="index.html">EXTENSE</a>
             </div>
           </div>
           <div class="col-9  text-right">
