--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           <div class="col-3 ">
 
             <div class="site-logo">
-              <img src="images/logosticker.png" alt="Image logo" class="img-fluid1">
+              <img src="images/logo.png" alt="Image logo" class="img-fluid1">
 
-              <a href="index.html">EXTENSE</a>
+              <a href="index.html">'EXTENSE</a>
             </div>
           </div>
           <div class="col-9  text-right">
@@ -86,6 +86,9 @@
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
         style="background-image: url('images/photo 1 sur site.jpg')">
+        <!-- <img src="images/photo 1 sur site.jpg" srcset="images/photo 1 sur site@2x.jpg 2x" ...> -->
+        
+        
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
