--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" onload="loadText()">
   <div class="site-wrap" id="home-section">
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
@@ -331,6 +332,21 @@
         </div>
       </div>
     </footer>
+
+
+    <script>
+      function loadText() {
+        alert(`Pour les activités physiques où la distanciation physique est impossible et qui impliquent des échanges physiques entre salariés ou entre salariés et clients / autres personnes, un protocole sanitaire spécifique doit être établi par l'employeur :
+
+Nettoyage et désinfection régulier des objets en question, avec un produit actif sur le virus SARS-CoV-2
+Lavage systématique des mains avant et après l'usage par les personnes concernées à l'eau et au savon de préférence, ou par friction hydro-alcoolique
+Information des salariés , clients, et toutes personnes concernées par ces procédures.
+Il est possible de réserver les objets à des personnes pour limiter le risque de contamination. Si un processus de nettoyage virucide n'est pas possible, les objets doivent être mis de côté au moins 24 heures.
+
+Port du masque`);
+      }
+      </script>
+
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.0.js"></script>
