--- a/entretien.html
+++ b/entretien.html
@@ -9,18 +9,23 @@
   <meta property="og:site_name" content="Rextense">
   <meta property="og:url" content="https://rextense.com/" />
   <meta property="og:image" content="https://rextense.com/" />
-  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
-  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+  <meta property="og:title"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
 
-  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="title"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
   <meta name="og:description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
-  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
-  
+  <meta name="twitter:title"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+
   <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -52,7 +57,8 @@
         <div class="row align-items-center position-relative">
           <div class="col-3 ">
             <div class="site-logo">
-              <a href="index.html">R'EXTENSE</a>
+              <a href="index.html"><img src="images/logo3.png" alt="Image logo" class="img-fluid1">
+              </a>
             </div>
           </div>
           <div class="col-9  text-right">
@@ -61,7 +67,7 @@
                   class="icon-menu h3 text-white"></span></a></span>
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="index.html" class="nav-link">Accueil</a></li>
                 <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
                 <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
                 <li class="active"><a href="entretien.html" class="nav-link">Entretien</a></li>
@@ -141,7 +147,8 @@
             </p>
             <ol>
               <li>La tête toujours en arrière.</li>
-              <li>Ne pas frotter fort le cuir chevelu au moment des shampoings mais faire des mouvements circulaires.</li>
+              <li>Ne pas frotter fort le cuir chevelu au moment des shampoings mais faire des mouvements circulaires.
+              </li>
               <li>Enfin, rincez et répétez l’opération une seconde fois si nécessaire.</li>
             </ol>
           </div>
