--- a/prestations-rdv.html
+++ b/prestations-rdv.html
@@ -52,7 +52,8 @@
         <div class="row align-items-center position-relative">
           <div class="col-3 ">
             <div class="site-logo">
-              <a href="index.html">R'EXTENSE</a>
+              <a href="index.html"><img src="images/logo3.png" alt="Image logo" class="img-fluid1">
+              </a>
             </div>
           </div>
           <div class="col-9  text-right">
@@ -61,7 +62,7 @@
                   class="icon-menu h3 text-white"></span></a></span>
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="index.html" class="nav-link">Accueil</a></li>
                 <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
                 <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
                 <li><a href="entretien.html" class="nav-link">Entretien</a></li>
