--- a/entretien.html
+++ b/entretien.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE : pose d'extensions cheveux à gargenville</title>
+  <title>R'EXTENSE : Pose d'extensions cheveux à gargenville ( 78 yvelines)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
@@ -10,21 +10,21 @@
   <meta property="og:url" content="https://rextense.com/" />
   <meta property="og:image" content="https://rextense.com/" />
   <meta property="og:title"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux - Rextense">
   <meta property="og:description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
 
   <meta name="title"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
   <meta name="og:description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
   <meta name="twitter:title"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
   <meta name="twitter:description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
 
   <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
     </header>
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-        style="background-image: url('images/photo 3 qualite des extensions.jpg')">
+        style="background-image: url('images/photo 12 sur site.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
