--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE : pose d'extensions cheveux à gargenville</title>
+  <title>R'EXTENSE : Pose d'extensions cheveux à gargenville ( 78 yvelines)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Rextense">
   <meta property="og:url" content="https://rextense.com/" />
   <meta property="og:image" content="https://rextense.com/" />
-  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
-  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
 
-  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
   <meta name="og:description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
-  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
+  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
 
 
 
@@ -84,7 +84,9 @@
     </header>
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-        style="background-image: url('images/photo 1.1 sur site.jpg')">
+        style="background-image: url('images/photo 3 qualite des extensions.jpg')">
+        <!-- style="background-image: url('images/photo 3 qualite des extensions.jpg')"> -->
+
         <!-- <figure>
           <picture>
 
