--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -9,17 +9,17 @@
   <meta property="og:site_name" content="Rextense">
   <meta property="og:url" content="https://rextense.com/" />
   <meta property="og:image" content="https://rextense.com/" />
-  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux - Rextense">
-  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
 
-  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
   <meta name="og:description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
-    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
-  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux.">
+  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
+  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
   
   <link rel="canonical" href="https://rextense.com/index.html" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
@@ -76,7 +76,7 @@
     </header>
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-        style="background-image: url('images/photo 2 entretenir les extensions.jpg')">
+        style="background-image: url('images/femme-shampoing.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
