--- a/index.html
+++ b/index.html
@@ -342,7 +342,21 @@
 
     <script>
       function loadText() {
-        alert(`Mesures COVID-19 Port du masque obligatoire(non fournis)`);
+        alert(`
+                         Mesures COVID-19 
+
+        . Port du masque obligatoire(non fournis)
+
+        . Respect des horaires de RDV pour éviter l'attente
+
+        . Ne pas venir accompagnér
+
+        . Les mesures barrières et sanitaires seront respectées
+
+        . Les protocoles de soins et techniques peuvent être long,
+          pensez à prévoir le temps nécessaire,
+          n'ayez aucune contrainte horaire afin de garantir 
+          un résultat optimal `);
       }
       </script>
 
