--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -175,6 +175,79 @@
   <footer class="site-footer">
     <div class="container">
       <div class="row">
+        <div class="col-lg-12 mb-3">
+          <h2 class="footer-heading mb-4">Zones d'intervention</h2>
+          <div class="villes">
+            <div class="ville-groupe">
+              <div class="ville-groupe">
+                <ul class="list-unstyled">
+                  <li>Aincourt</li>
+                  <li>Alluets Le Roi</li>
+                  <li>Aubergenville</li>
+                  <li>Aulnay sur Mauldre</li>
+                  <li>Auffreville-Brasseuil</li>
+                  <li>Arnouville les Mantes</li>
+                  <li>Bazemont</li>
+                  <li>Boinville en Mantois</li>
+                  <li>Bouafle</li>
+                  <li>Breuil Bois Robert</li>
+                  <li>Breuil en Vexin</li>
+                  <li>Buchelay</li>
+                </ul>
+              </div>
+              <div class="ville-groupe">
+                <ul class="list-unstyled">
+                  <li>Chambourcy</li>
+                  <li>Drocourt</li>
+                  <li>Epone</li>
+                  <li>Ecquevilly</li>
+                  <li>Follainville-Dennemont</li>
+                  <li>Fontenay saint Pere</li>
+                  <li>Gargenville</li>
+                  <li>Goussonville</li>
+                  <li>Guerville</li>
+                  <li>Guitrancourt</li>
+                  <li>Issou</li>
+                  <li>Jambville</li>
+                </ul>
+              </div>
+            </div>
+            <div class="ville-groupe">
+              <div class="ville-groupe">
+                <ul class="list-unstyled">
+                  <li>Jumeauville</li>
+                  <li>Lainville en Vexin</li>
+                  <li>La Falaise</li>
+                  <li>Limay</li>
+                  <li>Magnanville</li>
+                  <li>Mantes la Jolie</li>
+                  <li>Mantes la Ville</li>
+                  <li>Maule</li>
+                  <li>Meulan</li>
+                  <li>Mézieres sur Seine</li>
+                  <li>Montalet le bois</li>
+                </ul>
+              </div>
+              <div class="ville-groupe">
+                <ul class="list-unstyled">
+                  <li>Morainvilliers</li>
+                  <li>Nézel</li>
+                  <li>Oinville sur Montcient</li>
+                  <li>Orgeval</li>
+                  <li>Poissy</li>
+                  <li>Porcheville</li>
+                  <li>Rosny sur Seine</li>
+                  <li>Sailly</li>
+                  <li>Saint Martin la Garenne</li>
+                  <li>Triel sur Seine</li>
+                  <li>Vaux sur Seine </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-lg-3">
           <img src="images/Sam.jpg" alt="Image owner" class="img-fluid mb-5">
           <h2 class="footer-heading mb-3">A propos de moi</h2>
@@ -188,14 +261,16 @@
             <div class="col-lg-6 ml-auto">
               <h2 class="footer-heading mb-4">Liens</h2>
               <ul class="list-unstyled">
-                <li><a href="prestations-rdv.html">Contactez moi</a></li>
-              </ul>
+                <li><a href="prestations-rdv.html">Contactez moi</a></li>             
+                <li><a href="https://www.facebook.com/rextense.hair/" target="blank">Facebook &nbsp; <span class="icon-facebook"></span></a></li>
+                <li></i><a href="https://www.instagram.com/invites/contact/?i=1dee0wwscp8uf&utm_content=lexxbcm" target="blank">Instagram 	&nbsp; <span class="icon-instagram"></span> </a></li>
+              </ul>             
             </div>
           </div>
         </div>
       </div>
-    </div>
   </footer>
+
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.0.js"></script>
