--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <link rel="canonical" href="https://rextense.com/" />
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
   <!-- ==================================== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -319,10 +321,7 @@
         </div>
       </div>
     </div>
-
-
-
-
+    
     <footer class="site-footer">
       <div class="container">
         <div class="row">
@@ -407,19 +406,15 @@
               directement chez vous.
             </p>
           </div>
-
           <div class="col-lg-8 ml-auto">
             <div class="row">
               <div class="col-lg-6 ml-auto">
                 <h2 class="footer-heading mb-4">Liens</h2>
                 <ul class="list-unstyled">
-                  <li><a href="prestations-rdv.html">Contactez moi</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                </ul>
+                  <li><a href="prestations-rdv.html">Contactez moi</a></li>             
+                  <li><a href="https://www.facebook.com/rextense.hair/" target="blank">Facebook &nbsp; <span class="icon-facebook"></span></a></li>
+                  <li></i><a href="https://www.instagram.com/invites/contact/?i=1dee0wwscp8uf&utm_content=lexxbcm" target="blank">Instagram 	&nbsp; <span class="icon-instagram"></span> </a></li>
+                </ul>             
               </div>
             </div>
           </div>
