--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         </div>
       </div>
     </div>
-    
+
     <footer class="site-footer">
       <div class="container">
         <div class="row">
@@ -431,11 +431,11 @@ Mesures COVID-19
 
 . Respect des horaires de RDV pour éviter l'attente
 
-. Ne pas venir accompagnér
+. Ne pas venir accompagnée
 
 . Les mesures barrières et sanitaires seront respectées
 
-. Les protocoles de soins et techniques peuvent être long,
+. Les protocoles de soins et techniques peuvent être longs,
   pensez à prévoir le temps nécessaire,
   n'ayez aucune contrainte horaire afin de garantir 
   un résultat optimal `);
